<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_back">Voltar</string>
    <string name="action_button_help">@string/help_title</string>
    <string name="action_button_try_again">Tentar Novamente</string>
    <string name="action_definitions">Ir para Definições</string>
    <string name="action_devices_supported">Equipamentos Suportados</string>
    <string name="action_learn_more">Saber Mais</string>
    <string name="action_ok">OK</string>
    <string name="action_rent">Alugar</string>
    <string name="action_rent_price">Alugar por %1$s €</string>
    <string name="action_seasons">Temporadas</string>
    <string name="action_watch">Ver</string>
    <string name="action_watch_channel">Ver Canal</string>
    <string name="action_watch_series">Ver %1$s</string>
    <string name="action_watch_trailer">Ver Trailer</string>
    <string name="app_name">MEO</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="badge_live">Em Direto</string>
    <string name="badge_new_episode">Novo Episódio</string>
    <string name="badge_now">Agora</string>
    <string name="bookmark_fragment_continue_action">Continuar a Ver</string>
    <string name="bookmark_fragment_restart_action">Recomeçar</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="browse_fragment_client">Cliente</string>
    <string name="browse_fragment_definitions">Definições</string>
    <string name="browse_fragment_foryou">Para Si</string>
    <string name="browse_fragment_recordings">Gravações</string>
    <string name="browse_fragment_videoclube">VideoClube</string>
    <string name="button_now_label">Agora</string>
    <string name="cannot_open_content">Não existem conteúdos disponíveis. Por favor, tente mais tarde.</string>
    <string name="cannot_play_content">Não é possível ver este Programa</string>
    <string name="cast_header_title">Elenco e equipa</string>
    <string name="catalog_filter_title_all_channels">Todos os Canais</string>
    <string name="channels_details_available_on_meogo">Canal disponível no MEO Go</string>
    <string name="channels_details_image_quality">Qualidade de Imagem: %s</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">00000000000000000000000000000000</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="content_episode_detail_title">Episódio %1$s</string>
    <string name="content_info_april">Abr</string>
    <string name="content_info_august">Ago</string>
    <string name="content_info_callLetter">%1$s</string>
    <string name="content_info_callLetter_and_thematics">%1$s • %2$s</string>
    <string name="content_info_callLetter_and_time">%1$s — %2$s</string>
    <string name="content_info_callLetter_thematics_and_time">%1$s • %2$s — %3$s</string>
    <string name="content_info_december">Dez</string>
    <string name="content_info_february">Fev</string>
    <string name="content_info_friday">Sex</string>
    <string name="content_info_january">Jan</string>
    <string name="content_info_july">Jul</string>
    <string name="content_info_june">Jun</string>
    <string name="content_info_march">Mar</string>
    <string name="content_info_may">Mai</string>
    <string name="content_info_monday">Seg</string>
    <string name="content_info_november">Nov</string>
    <string name="content_info_october">Out</string>
    <string name="content_info_saturday">Sáb</string>
    <string name="content_info_season">Temporada %1$s</string>
    <string name="content_info_september">Set</string>
    <string name="content_info_start_end_time">%1$s — %2$s</string>
    <string name="content_info_sunday">Dom</string>
    <string name="content_info_thursday">Qui</string>
    <string name="content_info_time">%1$s - %2$s</string>
    <string name="content_info_time_duration">%1$s - %2$s — %3$s</string>
    <string name="content_info_time_duration_thematics">%1$s - %2$s — %3$s — %4$s</string>
    <string name="content_info_time_thematics">%1$s - %2$s — %3$s</string>
    <string name="content_info_time_with_day_number">%1$s, %2$s, %3$s - %4$s — %5$s</string>
    <string name="content_info_time_without_day_number">%1$s, %2$s - %3$s — %4$s</string>
    <string name="content_info_today">Hoje</string>
    <string name="content_info_tomorrow">Amanhã</string>
    <string name="content_info_tuesday">Ter</string>
    <string name="content_info_wednesday">Qua</string>
    <string name="content_info_yesterday">Ontem</string>
    <string name="copy">Copy</string>
    <string name="debugoverlay_notification_action_hide">Hide</string>
    <string name="debugoverlay_notification_action_show">Show</string>
    <string name="debugoverlay_notification_big_text">Control DebugOverlay</string>
    <string name="debugoverlay_notification_channel_name">DebugOverlay</string>
    <string name="debugoverlay_notification_small_text">Control DebugOverlay</string>
    <string name="debugoverlay_notification_title">%1$s:%2$s</string>
    <string name="debugoverlay_overlay_permission_prompt">Permission required to show the debug overlay</string>
    <string name="default_web_client_id">79191939139-37nekp27qmlarojhbpieoutj0g1aio1a.apps.googleusercontent.com</string>
    <string name="devices_supported_text">"Para a melhor experiência de televisão MEO, utilize os seguintes
 equipamentos com Android TV 9 ou superior.

 • NVIDIA SHIELD TV Pro
 • NVIDIA SHIELD TV
 • Xiaomi Mi Box S
"</string>
    <string name="devices_supported_title">Equipamentos Suportados</string>
    <string name="dismiss_error">OK</string>
    <string name="dummy_banner_documentaries_title">Documentários</string>
    <string name="dummy_banner_movies_title">Filmes</string>
    <string name="dummy_banner_series_title">Séries</string>
    <string name="edit_channels_instruction">"Prima para adicionar uma temática na posição indicada.
 Manter premido a temática para esconder canais."</string>
    <string name="edit_channels_reset_order">Repor Ordem Original</string>
    <string name="edit_channels_reset_order_cancel_button_text">Cancelar</string>
    <string name="edit_channels_reset_order_confirmation">Deseja repor a ordem original dos canais?</string>
    <string name="edit_channels_reset_order_confirmation_button_text">Repor</string>
    <string name="edit_channels_title">Editar Canais</string>
    <string name="edit_zapping_favorite_thematics_bottom_part_text">O conteúdo das primeiras temáticas vai aparecer na área inicial.</string>
    <string name="edit_zapping_favorite_thematics_button_text">Temáticas Favoritas (%d)</string>
    <string name="edit_zapping_favorite_thematics_radio_button_0">0</string>
    <string name="edit_zapping_favorite_thematics_radio_button_1">1</string>
    <string name="edit_zapping_favorite_thematics_radio_button_2">2</string>
    <string name="edit_zapping_favorite_thematics_radio_button_3">3</string>
    <string name="edit_zapping_favorite_thematics_radio_button_4">4</string>
    <string name="edit_zapping_favorite_thematics_top_part_text">Temáticas Favoritas</string>
    <string name="edit_zapping_instruction">Clique para adicionar uma temática na posição indicada.</string>
    <string name="pref_key_content_restrictions">content_restrictions_preference</string>
    <string name="pref_key_edit_pin_purchase">edit_pin_purchase_preference</string>
    <string name="pref_key_pin_purchase">pin_purchase_preference</string>
    <string name="pref_summary_edit_zapping">Personalizado</string>
    <string name="pref_title_content_restrictions">Restrição de Conteúdos</string>
    <string name="pref_title_edit_pin_purchase">Alterar PIN de Compras</string>
    <string name="pref_title_parental_control">Controlo Parental</string>
    <string name="pref_title_pin_purchase">PIN de Compras</string>
</resources>